# sm_calculator

./: CHANGELOG  CMakeLists.txt  HELP  INSTALL  LICENSE  README  README.md  sm_calc.fl_bis.bat  sm_calc.fl_bis.sh  sm_calculator.sln
Win32/share/smansoft/doc/: README
_cmake/: cmake_build.nmake.bat  cmake_build.sh  cmake_build.vs.x64.bat  cmake_build.vs.x86.bat  cmake_clear.bat  cmake_clear.sh
log_lib/: CMakeLists.txt  framework.h  log_lib.vcxproj  log_lib.vcxproj.filters  sm_files_tools.c  sm_files_tools.h  sm_log.c  sm_log.h  sm_log_types.h
sm_calc/: CMakeLists.txt  framework.h  pch.c  sm_calc.c  sm_calc.h  sm_calc.l  sm_calc.manifest  sm_calc.vcxproj  sm_calc.vcxproj.filters  sm_calc.y  sm_calc_l.c  sm_calc_proc.c  sm_calc_proc.h  sm_calc_types.h  sm_calc_y.c  sm_calc_y.h  sm_calc_y.output
sm_calc_tests/: CTestTestfile.cmake  sm_calc_tests.vcxproj  sm_calc_tests.vcxproj.filters
sm_calc_tests/Testing/Temporary/: CTestCostData.txt
tests/: CMakeLists.txt  CTestTestfile.cmake  framework.h  pch.c  pch.h  sm_calc_test.c  sm_calc_test.check.06.txt  sm_calc_test.check.07.txt  sm_calc_test.check.08.txt  sm_calc_test.in.01.txt  sm_calc_test.in.02.txt  sm_calc_test.in.03.txt  sm_calc_test.in.04.txt  sm_calc_test.in.05.txt  sm_calc_test.in.06.txt  sm_calc_test.in.07.txt  sm_calc_test.in.08.txt  sm_calc_test.out.01.001.txt  sm_calc_test.out.02.003.txt  sm_calc_test.out.03.000.txt  sm_calc_test.out.04.003.txt  sm_calc_test.out.05.001.txt  sm_calc_test.out.07.txt  sm_calc_test.out.08.003.txt  sm_calc_test.out.expr.txt  sm_calc_test.vcxproj  sm_calc_test.vcxproj.filters  sm_calc_test_expr.c  sm_calc_test_expr.vcxproj  sm_calc_test_expr.vcxproj.filters  sm_calc_test_files.c  sm_calc_test_files.check.bat  sm_calc_test_files.check.py  sm_calc_test_files.check.sh  sm_calc_test_files.vcxproj  sm_calc_test_files.vcxproj.filters  sm_calc_test_log.c  sm_calc_test_log.vcxproj  sm_calc_test_log.vcxproj.filters  sm_calc_test_mthread.c  (+4 more)
x64/share/smansoft/doc/: CHANGELOG  HELP  INSTALL  LICENSE
